<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- mark favourite message -->
    <string name="successful">Successfully marked as favourites</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="api_key">AIzaSyCDylplefNyWlLDoBL_n2VFjwlMWvq3sBg  </string>
    <string name="app_name">Trainer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>

    <!-- Error Messages -->
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>

    <!-- Date Time -->
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>

    <!-- AnyTextView -->
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="home1">HOME</string>
    <string name="profile">Profile</string>
    <string name="profile1">PROFILE</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">SETTINGS</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>

    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>

    <string name="default_hint_text">Where are you going?</string>

    <string name="connection_lost">No Internet Found</string>


    <!--FONTS-->
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold">Poppins-Bold_1.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>


    <string name="notification">Notifications</string>
    <string name="notification1">NOTIFICATIONS</string>
    <string name="about_us">About Us</string>
    <string name="about">About</string>
    <string name="feel_free">Feel free to contact us</string>
    <string name="save">Save</string>
    <string name="password_not_equal">New and confirm psasword are not equal</string>
    <string name="password_length">Password length should be 6 characters or more</string>
    <string name="your_height_in_cm">Your height in cm</string>
    <string name="your_weight_in_kg">Your weight in kg</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="please_enter_height">Please enter height in cm</string>
    <string name="height_error">Please enter height in correct format</string>
    <string name="wight_error">Please enter weight in correct format</string>
    <string name="please_enter_weight">Please enter weight</string>
    <string name="please_enter_about">Please enter about you</string>
    <string name="view_profile">View Profile</string>
    <string name="units">Units</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height_cm">Height in cm</string>
    <string name="weight_kg">Weight in kgs</string>
    <string name="weight_lb">Weight in lbs</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile1">EDIT PROFILE</string>
    <string name="update_profile_">UPDATE PROFILE</string>
    <string name="please_enter_fullname">Please enter full name</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="membership">MEMBERSHIP</string>
    <string name="workout">WORKOUT</string>
    <string name="log">LOG</string>
    <string name="guide">GUIDE</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="write_your_comments">Write your comments</string>
    <string name="submit">Submit</string>
    <string name="current_exercise">Current Excercise</string>
    <string name="in_gym_location">In Gym Location</string>
    <string name="req_support">Request Support</string>
    <string name="will_be_imp_beta">Will be implemented in beta</string>
    <string name="will_be_future_beta">Will be implemented in future version</string>
    <string name="age_">AGE</string>
    <string name="weigh">WEIGHT</string>
    <string name="weight">Weight</string>
    <string name="change_view">Change View</string>
    <string name="you_did_great">YOU DID GREAT!</string>
    <string name="gym_detail">Gym Detail</string>
    <string name="scan_code">Scan QR Code</string>
    <string name="scanned_complete">Scan Complete</string>
    <string name="user_cancel_permission">User Cancel Permission</string>
    <string name="machine_mal">Machine Malfunction</string>
    <string name="tap_to_start_scan">Tap To Start Scan</string>
    <string name="ms">MS</string>
    <string name="hour">HOUR</string>
    <string name="mins">MINS</string>
    <string name="secs">SECS</string>
    <string name="workout_">Workout</string>
    <string name="save_reps_entry_for_future_workouts">save reps entry for future workouts</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="date_range">Date Range</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="choose_how">How do you want to set your photo?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="floor_plan">FLOOR PLAN</string>
    <string name="support_plan">SUPPORT PLAN</string>
    <string name="trainee_profile">TRAINER PROFILE</string>
    <string name="view_support_log">VIEW SUPPORT LOG</string>
    <string name="view_support_req">VIEW SUPPORT REQUEST</string>
    <string name="assigned">Assigned</string>
    <string name="support_req">SUPPORT REQUEST</string>
    <string name="support_Log">SUPPORT LOG</string>
    <string name="signin">SIGNIN</string>
    <string name="height">Height</string>
    <string name="job_done">Job Done</string>
    <string name="completed">Completed</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="enter_confirm_password">Confirm Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="confirmpasswordLength">Confirm Password cannot be less than 6 characters</string>
    <string name="samePassword">New password should be changed from previous password</string>
    <string name="conform_password_error">confirm password does not match</string>
    <string name="password_length_alert">Password should be 6 or more characters long.</string>
    <string name="pass_changed">Password has been changed successfully.</string>
    <string name="no_notifaction_found">No notifaction found</string>
    <string name="support">Support</string>
    <string name="no_request_found">No support request found</string>
    <string name="rate">Rate</string>
    <string name="support_request">Support Request</string>
    <string name="do_you_want_to_accept_this_request">Do you want to accept this request?</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="do_you_want_to_complete_this_job">Do you want to complete this job?</string>
    <string name="app_version">App Version</string>
    <string name="no_completed_job">No completed job found</string>
    <string name="job_done_succesfully">Job has completed successfully</string>
    <string name="url_not_avaliable">URL not avaliable</string>
    <string name="profile_updated">Profile has been updated successfully</string>
    <string name="job_accept">Job Accepted</string>
    <string name="email_subject">Gym Buz Query</string>
    <string name="something_error">Something wenr wrong. We\'re trying to Fix it</string>

</resources>