<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x35"
        android:src="@drawable/logo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x50"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.app.gymbuztrainer.ui.views.AnyTextView
                android:id="@+id/btnFloorPlan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/x5"
                android:drawableTop="@drawable/floorplan"
                android:gravity="center_horizontal"
                android:padding="@dimen/x25"
                android:text="@string/floor_plan"
                android:textColor="@color/dark_green_text"
                android:textSize="@dimen/x12"
                app:typeface="@string/font_normal" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <com.app.gymbuztrainer.ui.views.AnyTextView
                android:id="@+id/btnSupportPlan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/x5"
                android:drawableTop="@drawable/supportplan"
                android:gravity="center_horizontal"
                android:padding="@dimen/x25"
                android:text="@string/support_plan"
                android:textColor="@color/dark_green_text"
                android:textSize="@dimen/x12"
                app:typeface="@string/font_normal" />

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="@dimen/x20"
            android:layout_marginEnd="@dimen/x20"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.app.gymbuztrainer.ui.views.AnyTextView
                android:id="@+id/btnTraineeProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/x5"
                android:drawableTop="@drawable/gymprofile"
                android:gravity="center"
                android:padding="@dimen/x25"
                android:text="@string/trainee_profile"
                android:textColor="@color/dark_green_text"
                android:textSize="@dimen/x12"
                app:typeface="@string/font_normal" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <com.app.gymbuztrainer.ui.views.AnyTextView
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="@dimen/x5"
                android:drawableTop="@drawable/settings"
                android:gravity="center"
                android:padding="@dimen/x25"
                android:text="@string/settings"
                android:textColor="@color/dark_green_text"
                android:textSize="@dimen/x12"
                app:typeface="@string/font_normal" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>